A:Buttons: Adds code blocks for each and fixes some minor alignment bugs. Adds 'fluid' class for module/organism instances

--- a/source/css/scss/base/_main.scss
+++ b/source/css/scss/base/_main.scss
@@ -11,6 +11,11 @@ body {
   max-width: 1280px;
   width: 80%;
   column-gap: $space-double;
+  row-gap: $space-double;
   display: grid;
   grid: repeat(12, 1fr) / auto-flow;
+}
+
+.centered {
+  grid-column: 2;
 }
