--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -28,13 +28,13 @@
     outline: 2px solid $nypl-blue-dark;
   }
 
+  &.fluid {
+    width: 100%;
+  }
+
   &.disabled {
     background: $gray-light;
     color: $gray;
-
-    &:hover {
-      background-color: $gray-dark;
-    }
   }
 
   .icon {
@@ -56,10 +56,8 @@
   position: relative;
 
   .icon-arrow-right {
-    position: absolute;
     margin-left: 5px;
-    margin-top: 1px;
-    margin-right: unset;
+    vertical-align: middle;
     width: 9px;
   }
 
@@ -84,8 +82,6 @@
   border: 1px solid $gray-light;
   color: $black;
   justify-content: center;
-  width: 100%;
-
 
   &:hover {
     background: $gray-xxlight;
@@ -154,4 +150,14 @@
 .placeholder {
   background-color: $black;
   margin-right: 5px;
+}
+
+.btn-group {
+  display: flex;
+  align-content: center;
+
+  .btn {
+    margin-top: unset;
+    margin-right: $space-half;
+  }
 }
